# rest-api-beispiele-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  rest-api-beispiele.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  rest-api-beispiele.rockspec  rest-api-beispiele_sdk.lua  (+1 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  pyproject.toml  restapibeispiele_sdk.py  restapibeispiele_types.py
py/core/: context.py  control.py  helpers.py  result.py  utility_type.py
py/entity/: delete_entity.py  product_entity.py
py/feature/: base_feature.py  cache_feature.py  clienttrack_feature.py  log_feature.py  metrics_feature.py  netsim_feature.py  paging_feature.py  proxy_feature.py  ratelimit_feature.py  rbac_feature.py  telemetry_feature.py  test_feature.py
py/test/: feature_harness.py  runner.py  test_delete_entity.py  test_exists.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_product_direct.py  test_product_entity.py  test_readme_examples.py
py/utility/: clean.py  feature_add.py  feature_init.py  make_context.py  make_error.py  make_options.py  make_request.py  make_result.py  make_spec.py  param.py  prepare_auth.py  prepare_method.py  prepare_params.py  prepare_path.py  register.py  result_basic.py  transform_request.py
(+431 files in other folders)
